--- a/_tools/config.ini
+++ b/_tools/config.ini
@@ -1,7 +1,7 @@
 [addon]
 name=Man Cave Repo
 id=repository.mancaverepo
-version=2.0.1
+version=2.0.2
 author=Man Cave Entertainment
 summary=Man Cave Repo
 excludes=.psd,.pyo,.pyc,.gitignore,.DS_Store
@@ -9,4 +9,4 @@ description=Man Cave Entertainment
 
 [locations]
 url=https://raw.githubusercontent.com/TVKINGS/ManCaveRepo/master/
-output_path=__zips/
+output_path=zips/
